       should consider redoing your old experiments with this model.
     Sorry for the inconvenience.

 MSG:
 * Port of MSG's mailbox on top of SIMIX network
   The put/get mechanism was greatly simplified thanks to the new SIMIX module.

 SIMIX:
 * New SIMIX network module
   It provides a rendez-vous point (aka mailbox) based send/recv API to perform
   synchronous communication. 
   
 SimDag:
 * new function SD_daxload(char*) to load a DAX file 
   (see http://vtcpc.isi.edu/pegasus/index.php/WorkflowGenerator)
 * Introduce typed tasks. Specify its kind and cost at creation. 
   At scheduling, just give where it should be placed, and the cost
   for each involved resource is automatically computed.
   Existing constructors so far (more to come of course):
    - SD_task_create_comm_e2e() for end-to-end communication
    - SD_task_create_comp_seq() for sequential computation
   Use SD_task_schedulev() / SD_task_schedulel() to schedule them.
 * new function SD_task_dump() for debuging display
 * new function SD_task_dotty(task,FILE*) writing to file the info
   about the task in dotty format
 * SD_task_dependency_exists() can now cope with having one of its
   arguments NULL. If so, it tests whether the other argument has any 
   dependency.
 * Add getters on list of preceding/following tasks:
    SD_task_get_parents(task) and SD_task_get_children(task)
 * Add getters on amount of workstations and list:
    SD_task_get_workstation_count(t) and SD_task_get_workstation_list(t)
 * Add getter on task kind: SD_task_get_kind(task)
 * Update the start_time and finish_time of tasks on completion/failure
 * Bugfix: Remove task from state swags when destroyed
 
 GRAS:
 * New function: void gras_cpu_burn(double flops) -- a simple CPU burner

 XBT:
 * New function: xbt_dynar_dopar(dynar,fun) to map a function over the
   dynar with one separate thread per value of the dynar.
 * Change the prototype of xbt_thread_create(), sorry. 