@@ -35,6 +35,7 @@ SG_BEGIN_DECL()
 /* ******************************** Syncro ************************************ */
      typedef struct s_smx_mutex *smx_mutex_t;
      typedef struct s_smx_cond *smx_cond_t;
+     typedef struct s_smx_sem *smx_sem_t;
 
 /********************************** Action *************************************/
      typedef struct s_smx_action *smx_action_t;
